--- a/src/app/components/dialog-image/dialog-image.component.html
+++ b/src/app/components/dialog-image/dialog-image.component.html
@@ -1,1 +1,2 @@
+<img src="assets/images/logo_fermer.png" alt="Logo Fermer" class="fermer" id="fermer_logo" title="Fermer la fenêtre" (click)="closeDialog($event)">
 <img [src]="source" [alt]="alt" id="image">
