--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,9 +1,16 @@
-.image{
-    width: 50%;
+#image{
     position: relative;
     display: block;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
     margin-bottom: 20px;
+}
+
+.desktop{
+    width: 50% !important;
+}
+
+.mobile{
+    width: 80% !important;
 }
