--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,25 +2,32 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-#Title{
+.desktop{
+    min-width: 720px !important;
+    width: 40% !important;
+    position: relative;
     display: block;
     margin-left: auto;
     margin-right: auto;  
+}
+
+.mobile{
+    width: 80% !important;
+    position: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;  
+}
+
+#title{
     text-align: center;
-    min-width: 720px;
-    width: 40%;
     font-size: 40px;
     padding-bottom: 20px;
 }
 
-#Summary{
+#summary{
     font-size: 16px;
     padding: 20px;
-    min-width: 720px;
-    width: 40%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 #info{
@@ -42,25 +49,25 @@
     border-color: white;
     position: fixed;
     bottom: 35%;
-    right: 30px;
     z-index: 99;
     writing-mode: vertical-rl;
     text-orientation: upright;
     font-family: monospace;
     /* width: 40px; */
-    padding: 10px;
 }
 
-.container {
-    min-width: 720px;
-    width: 40%;
-    position: relative;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;  
-  }
+.btn_desktop{
+    right: 30px !important;
+    padding: 10px !important;
+}
+
+.btn_mobile{
+    font-size: 10px !important;
+    left: 5px !important;
+    padding: 5px !important;
+}
   
-  .text-block {
+.text-block {
     position: absolute;
     bottom: 5px;
     right: 5px;
@@ -69,16 +76,11 @@
     padding-left: 20px;
     padding-right: 20px;
     font-size:10px
-  }
+}
 
-.content{
+#content{
     font-size: 14px;
     padding: 20px;
-    min-width: 720px;
-    width: 40%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .function{
