--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <p></p>
 <div class="header-container">
-    <img src="assets/images/logo_sanscontour.png" alt="Logo" class="image">
+    <img src="assets/images/logo_sanscontour.png" alt="Logo" id="image" class="desktop">
 </div>
