--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
     <p #element2 id ="2"></p>
     <p>Ci-dessous, une carte de localisation de l'EPCI : </p>
     <p class="image-content">
-      <img src="assets/cartes/carte_localisation.png" alt="Carte Localisation" class="image" (click)="openDialogImage($event)">
+      <img src="assets/cartes/carte_localisation.jpg" alt="Carte Localisation" class="image" (click)="openDialogImage($event)">
     </p>
     <p class="subtitle">Les données</p>
     <p>Comme vous avez pu le voir, sur la carte, l'EPCI ne comporte que quatre villes (Ce qui est relativement rare en France (En 2024, 
@@ -145,7 +145,7 @@
       afin d'avoir les fameuses zones d'influences de nos points d'eau, ce qui nous donne cette carte : 
     </p>
     <p class="image-content">
-      <img src="assets/cartes/carte_voronoi1.png" alt="Carte Voronoi1" class="image" (click)="openDialogImage($event)">
+      <img src="assets/cartes/carte_voronoi1.jpg" alt="Carte Voronoi1" class="image" (click)="openDialogImage($event)">
     </p>
     <p>
       De cet export, on peut déjà tirer plusieurs conclusions :
